# sar-optical-fusion-dfc2020

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
checkpoints/cli_smoke_bs16/: history.json
checkpoints/cli_smoke_late/: history.json
checkpoints/cli_smoke_s2/: history.json
checkpoints/early_fusion/: history.json  test_metrics.json
checkpoints/late_fusion/: history.json  test_metrics.json
checkpoints/s1_only/: history.json  test_metrics.json
checkpoints/s2_only/: history.json  test_metrics.json
checkpoints/smoke_test_s2/: history.json
configs/: config.yaml
configs/dataset/: dfc2020.yaml
configs/experiment/: early_fusion.yaml  late_fusion.yaml  s1_only.yaml  s2_only.yaml
configs/model/: unet_early_fusion.yaml  unet_late_fusion.yaml  unet_s1.yaml  unet_s2.yaml
configs/training/: default.yaml
data/: README.md
notebooks/: 01_data_exploration.ipynb  path_generation.ipynb
outputs/: selected_test_patches.json
scripts/: compute_class_weights.py  evaluate.py  inspect_config.py  plot_per_class_comparison.py  plot_prediction_grids.py  select_test_patches.py  smoke_test_training.py  train.py
src/sar_optical_fusion/data/: class_weights.json  dataset.py  dataset_stats.json  splits.json  splits.py
src/sar_optical_fusion/evaluation/: metrics.py
src/sar_optical_fusion/models/: dual_encoder_unet.py  unet.py
src/sar_optical_fusion/training/: loop.py  loss.py
