[project]
name = "sar-optical-fusion-dfc2020"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "rasterio>=1.4.4",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[tool.hatch.build.targets.wheel]
packages = ["src/sar_optical_fusion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.15",
]
